# VacationApp

./: CMakeLists.txt  README.md  TestDatebase.sql  VacationApp_en_US.qm  VacationApp_en_US.ts  VacationApp_ru_RU.ts  employeeadddialog.cpp  employeeadddialog.h  employeeadddialog.ui  horizontalheaderitem.cpp  horizontalheaderitem.h  main.cpp  settings.ini.txt  vacationadddialog.cpp  vacationadddialog.h  vacationadddialog.ui  vacationeditdialog.cpp  vacationeditdialog.h  vacationeditdialog.ui  vacationrectitem.cpp  vacationrectitem.h  vacationscene.cpp  vacationscene.h  vacationtable.cpp  vacationtable.h  vacationtable.ui  verticalheaderitem.cpp  verticalheaderitem.h
